# join_with_assignments

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: analise_do_periodo_de_apuracao.rs  args.rs  columns.rs  consolidacao_da_natureza.rs  descricoes.rs  error.rs  errors.rs  excel.rs  excel_writer.rs  filtros.rs  glosar_base_de_calculo.rs  legislacao_aliquota_zero.rs  legislacao_credito_presumido.rs  legislacao_incidencia_monofasica.rs  lib.rs  main.rs  munkres.rs  my_table.rs  polars_assignments.rs  regime_fiscal.rs  regimes_fiscais.rs  traits.rs  write.rs  xlsx_writer.rs
src/regime_fiscal/: aplicacao_do_regime.rs  legislacao_aliquota_zero.rs  legislacao_credito_presumido.rs  legislacao_incidencia_monofasica.rs  mod.rs
src/tests/: csv_file01
