[package]
name = "join_with_assignments"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
homepage = "https://github.com/claudiofsr/join_with_assignments"
repository = "https://github.com/claudiofsr/join_with_assignments"
description = """
This program pairs/aligns two files in CSV format.
The Kuhn-Munkres algorithm is used to solve the assignment problem.
https://github.com/claudiofsr/join_with_assignments\
"""
documentation = "https://github.com/claudiofsr/join_with_assignments"
keywords = [
    "CSV",
    "polars",
    "assignment problem",
    "Kuhn-Munkres algorithm",
]
categories = ["command-line-utilities", "text-processing"]
include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]
license = "BSD-3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0"
cc = { version = "1.0", features = ["parallel"] }
chrono = { version = "0.4", features = [ "serde" ] }
claudiofsr_lib = "0.5"
colored = "2.1"
confy = "0.6"
once_cell = "1.19"
pathfinding = "4.9"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = [ "derive" ] }
sysinfo = "0.30"
tabled = { version = "0.15", features = ["ansi"] }
toml = "0.8"

[dependencies.clap]
version = "4.5"
features = [
    "derive",
    "color",
    "env",
    "help",
]

[dependencies.polars]
version = "0.39.2"
# git = "https://github.com/pola-rs/polars.git"
# rev = "d01c4bf4"
# https://github.com/pola-rs/polars/releases/tag/rs-0.37.0
# https://github.com/pola-rs/polars/releases/tag/rs-0.38.0
# https://github.com/pola-rs/polars/releases/tag/rs-0.39.0
features = [
    "abs",        # Convert all values to their absolute/positive value.
    "concat_str", # Concat string data in linear time
    "dtype-array",
    "dtype-date",
    "dtype-struct",
    "dtype-datetime",
    "dtype-duration",
    "dtype-categorical",
    "dtype-i16",    # fix: "unsupported data type when reading CSV: i16 when reading CSV"
    "is_in",        # Check for membership in Series
    "lazy",         # Lazy API
    "list_eval",    # Apply expressions over list elements
    "list_gather",  # Take sublist by multiple indices
    "parquet",      # Read Apache Parquet format
    "regex",        # Use regexes in column selection
    "repeat_by",
    "round_series", # Round underlying float types of Series
    "serde-lazy",   # Support for serde serialization and deserialization.
    "strings",      # Extra string utilities for Utf8Chunked
]

[dependencies.rust_xlsxwriter]
# version = "0.64.2"
# git = "https://github.com/jmcnamara/rust_xlsxwriter.git"
# Change polars version dependencies to "0.39.2":
path = "/home/claudio/.cargo/registry/src/index.crates.io-6f17d22bba15001f/rust_xlsxwriter-0.64.2"
features = [
    "chrono",
    "polars",
    "zlib",
]

# [dependencies.polars_excel_writer]
# version = "0.4"
# features = [ "zlib" ]
# git = "https://github.com/jmcnamara/polars_excel_writer"
# branch = "dependabot/cargo/rust_xlsxwriter-0.54.0"
# branch = "dependabot/cargo/polars-0.35.4"

[lints.rust]
unsafe_code = "forbid"

# Package release:
# Cross-compile a Rust application from Linux to Windows
# On Manjaro Linux, install with: pacman -S mingw-w64-gcc
# rustup target list
# After downloading the target with `rustup target add x86_64-pc-windows-gnu`
# cargo b -r --target x86_64-unknown-linux-gnu --target x86_64-pc-windows-gnu

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = false           # No debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
